fixed up scroller header font size on mobile

--- a/css/scss/_layout.scss
+++ b/css/scss/_layout.scss
@@ -312,6 +312,9 @@ body {
 				@include font-size(20);
 			}				
 
+			@include device-width(4) {
+				@include font-size(15);
+			}	
 
 		}
 
